chore: Search popup height fixed since it is overlapping the input.

--- a/_assets/css/_styles.scss
+++ b/_assets/css/_styles.scss
@@ -2466,7 +2466,7 @@ $callout-bg: #d7dfe3;
     }
 
     #refine-search-container {
-        height: 36px;
+        height: 39px;
     }
 
     #refine-search-button {
